cat > Cargo.toml << 'EOF'
[package]
name = "endfield-sign"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
base64 = "0.21"
url = "2.5"
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
strip = true
EOF