[package]
name = "skland-sign"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
md5 = "0.7"
base64 = "0.21"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
url = "2.0"
urlencoding = "2.1"

# 加密相关
pkcs8 = "0.10"
rand = "0.8"
aes = "0.8"
des = "0.8"
cbc = "0.1"
rsa ="0.9"
flate2 = "1.0"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
